package com.example.demo.primitive;

public class ExpenditureDate {
	private java.time.LocalDate date;
}
