package com.example.demo.primitive;

public class Year {
	private int value;
}
