package com.example.demo.service;

public class AggregateService {

}
