package com.example.demo.service;

public class ExpenditureService {

}
